# django-permission2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  README.rst  manage.py  pyproject.toml  renovate.json  setup.py  tox.ini
.github/workflows/: run-tests.yml
docs/: conf.py  index.rst  permission.templatetags.rst  requirements.txt
docs/api/: backends.rst  compat.rst  conf.rst  decorators.rst  handlers.rst  index.rst  logics.rst  mixins.rst  templatetags.rst  utils.rst
docs/user/: admin.rst  decorators.rst  install.rst  license.rst  perms.rst  templatetags.rst
permission/: __init__.py  backends.py  compat.py
permission/decorators/: __init__.py  functionbase.py
permission/logics/: __init__.py  base.py  groupin.py
permission/mixins/: __init__.py  admin.py
permission/utils/: autodiscover.py  handlers.py  logics.py  permissions.py
src/permission/: __init__.py  backends.py  conf.py  handlers.py
src/permission/decorators/: classbase.py  methodbase.py  permission_required.py  utils.py
src/permission/logics/: author.py  collaborators.py  groupin.py  oneself.py  staff.py
src/permission/templatetags/: permissionif.py
src/permission/tests/: compat.py  test_backends.py  test_handlers.py  test_version.py  utils.py
src/permission/tests/test_decorators/: test_classbase.py  test_functionbase.py  test_methodbase.py  test_permission_required.py  utils.py
src/permission/tests/test_logics/: test_author.py  test_base.py  test_collaborators.py  test_groupin.py  test_oneself.py  test_staff.py
src/permission/tests/test_templatetags/: test_permissionif.py
src/permission/tests/test_utils/: test_field_lookup.py  test_handlers.py  test_logics.py
src/permission/utils/: field_lookup.py
tests/: compat.py  models.py  settings.py  test_backends.py  test_handlers.py  utils.py
tests/appconfig/: apps.py
tests/test_decorators/: test_classbase.py  test_functionbase.py  test_methodbase.py  test_permission_required.py  utils.py
tests/test_logics/: test_author.py  test_base.py  test_collaborators.py  test_groupin.py  test_oneself.py  test_staff.py
tests/test_mixins/: test_admin.py
tests/test_templatetags/: test_permissionif.py
tests/test_utils/: test_field_lookup.py  test_handlers.py  test_logics.py  test_permissions.py
