[tool.poetry]
name = "django-permission2"
version = "2.1.0"
description = "A simple permission system which enable logical permission systems in Django"
authors = ["Malte Gerth <mail@malte-gerth.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://django-permission2.readthedocs.io/"
repository = "https://github.com/JanMalte/django-permission2/"
documentation = "https://django-permission2.readthedocs.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["django","object","logical","permission"]
packages = [
    { include = "permission", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.2"
django-appconf = ">=1.0.5"
Sphinx = {version = "5.3.0", optional = true}
sphinx-rtd-theme = {version = "1.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "==7.13.5"}
pre-commit = "==4.5.1"
ruff = "==0.15.9"
tox = "==4.52.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.urls]
Tracker = "https://github.com/JanMalte/django-permission2/issues/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501", "UP", "I", "DJ"]
ignore = ["D212", "D203"]

[tool.coverage.run]
branch = true
source = ["src/permission/", "tests/"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = ["pragma: no cover"]

[tool.coverage.html]
directory = "coverage/"
