[project]
name = "django-permission2"
version = "2.1.0"
description = "A simple permission system which enable logical permission systems in Django"
authors = [
    { name = "Malte Gerth", email = "mail@malte-gerth.de" },
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["django", "object", "logical", "permission"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "django-appconf>=1.0.5",
]

[project.urls]
Documentation = "https://django-permission2.readthedocs.io/"
Homepage = "https://django-permission2.readthedocs.io/"
Issues = "https://github.com/JanMalte/django-permission2/issues/"
Repository = "https://github.com/JanMalte/django-permission2/"

[dependency-groups]
dev = [
    "coverage[toml]==7.13.5",
    "pre-commit==4.5.1",
    "ruff==0.15.9",
    "tox==4.52.0",
]
docs = [
    "Sphinx==5.3.0",
    "sphinx-rtd-theme==1.3.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "permission" },
]

[tool.poetry.group.docs]
optional = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501", "UP", "I", "DJ"]
ignore = ["D212", "D203"]

[tool.coverage.run]
branch = true
source = ["permission/", "tests/"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = ["pragma: no cover"]

[tool.coverage.html]
directory = "coverage/"
