[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1" ]

[project]
name = "django-permission2"
version = "2.2.0"
description = "A simple permission system which enable logical permission systems in Django"
readme = "README.rst"
keywords = [ "django", "logical", "object", "permission" ]
license = "MIT"
license-files = [ "LICENSE*" ]
authors = [
  { name = "Malte Gerth", email = "mail@malte-gerth.de" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "django>=4.2",
  "django-appconf>=1.0.5",
]
urls.Documentation = "https://django-permission2.readthedocs.io/"
urls.Homepage = "https://django-permission2.readthedocs.io/"
urls.Issues = "https://github.com/JanMalte/django-permission2/issues/"
urls.Repository = "https://github.com/JanMalte/django-permission2/"

[dependency-groups]
dev = [
  "coverage[toml]==7.13.5",
  "pre-commit==4.5.1",
  "ruff==0.15.10",
  "tox==4.52",
]
docs = [
  "sphinx==9.1; python_version>='3.12'",
  "sphinx-rtd-theme==3.1; python_version>='3.12'",
]

[tool.poetry]
packages = [
  { include = "permission" },
]
group.docs.optional = true

[tool.ruff]
line-length = 120
lint.extend-select = [ "DJ", "E501", "I", "UP" ]
lint.ignore = [ "D203", "D212" ]

[tool.coverage]
run.branch = true
run.source = [ "permission/", "tests/" ]
report.exclude_lines = [ "pragma: no cover" ]
report.ignore_errors = true
report.show_missing = true
html.directory = "coverage/"
